Started design of Message Section

--- a/src/style.scss
+++ b/src/style.scss
@@ -167,10 +167,46 @@
                     border-radius: 50%;
                     object-fit: cover;
                 }
+
+                .userChatInfo{
+                    span{
+                        font-size: 18px;
+                        font-weight: 500;
+
+                    }
+                    p{
+                        font-size: 14px;
+                        color: lightgray;
+                    }
+                }
             }
         }
 
-        .chat{flex: 2;}
+        .chat{
+            flex: 2;
+            
+            .chatInfo{
+                background-color: #5d5b8d;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                color: lightgray;
+
+
+            }
+
+            .chatIcons{
+                display: flex;
+                gap: 10px;
+
+                img{
+                    height: 24px;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 
 
