--- a/src/style.scss
+++ b/src/style.scss
@@ -211,6 +211,32 @@
                 background-color: #ddddf7;
                 padding: 10px;
                 height: calc(100% - 160px);
+                overflow: scroll;
+
+                .message{
+                    display: flex;
+                    gap: 20px ;
+                    margin-bottom: 20px;
+
+                    .messageInfo{
+                        display: flex;
+                        flex-direction: column;
+                        color: gray;
+                        font-weight: 300;
+
+                        img{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                        }
+                    }
+                    .messageContent{
+                        img{
+                            width: 50%;
+                        }
+                    }
+                }
             }
 
             .input{
