--- a/src/style.scss
+++ b/src/style.scss
@@ -232,9 +232,36 @@
                         }
                     }
                     .messageContent{
+                        max-width: 80%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+
+                        p{
+                            background-color: white;
+                            padding: 10px 20px;
+                            border-radius: 0px 12px 12px 12px;
+                            max-width: max-content;
+                        }
                         img{
                             width: 50%;
                         }
+                    }
+
+                    &.owner{ /* important */
+
+                        flex-direction: row-reverse;
+
+                        .messageContent{
+                            align-items: flex-end;
+                            p{
+                                background-color: #8da4f1;
+                                color: white;
+                                border-radius: 12px 0px 12px 12px;
+                            }
+
+
+                         }
                     }
                 }
             }
